[package]
name = "node-systemstat"
version = "0.1.0"
description = "A Node.js native module to get various host system stats like memory/cpu load."
authors = ["Andras Mocsary"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.systemstat]
version = "0.2.3"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
